# AIWorkshop

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: run_tests.prompt.md
src/aiworkshop/: __init__.py  data_helpers.py  image_tool.py  models.py  playwright_mcp.py  testcase_helper.py  types.py  weather.py
tests/: author_reviewer.robot  browser_test.robot  conversation.robot  first.robot  first_ai_tests.robot  generate_image.robot  image_recognition.robot  planner_executor.robot  weather.robot  weather_toolsets.robot
tests/mcp_browser/: excecute_tests_from_description.robot  simple.robot
tests/structured_data/: simple.robot
