[project]
name = "aiworkshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Biehl", email = "dbiehl@live.de" }
]
requires-python = ">=3.12"
dependencies = [
    "robotframework>=7.3.2",
    "robotframework-aiagent>=0.0.1",
    "robotframework-browser>=19.8.0",
]

[project.scripts]
aiworkshop = "aiworkshop:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "robotframework-robocop>=6.7.1",
    "mypy"
]
